--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -204,6 +204,7 @@ on boot
     # FPC home button permissions
     chown system system /sys/homebutton/enable
     chown system system /sys/homebutton/enable_wakeup
+    chown system system /sys/homebutton/key
 
     # STML0XX driver parameter permissions
     chown root oem_5004 /sys/module/stml0xx/parameters/irq_disable
